--- a/.env
+++ b/.env
@@ -10,7 +10,8 @@ DB_CONNECTION=sqlite
 DB_HOST=127.0.0.1
 DB_PORT=3306
 #DB_DATABASE=homestead
-DB_DATABASE="/Users/dmitrieffserzh/Проекты/BoileR/database/database.sqlite"
+#DB_DATABASE="/Users/dmitrieffserzh/Проекты/BoileR/database/database.sqlite"
+DB_DATABASE="D:/DEVEPOPMENT/BoileR/database/database.sqlite"
 DB_USERNAME=homestead
 DB_PASSWORD=secret
 
